# hacktheclimate

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: azure-webapps-dotnet-core.yml  frontend.yml
Platform/Service/: DataSquadService.sln
Platform/Service/DataSquad.Service.API/: AnalysisModel.cs  DataSquad.Service.API.csproj  DataSquad.Service.API.http  Program.cs
Platform/Service/DataSquad.Service.Data/: ApplicationDbContext.cs  DataSquad.Service.Data.csproj  Entity.cs
Platform/Service/DataSquad.Service.Domain/: Things.cs
Platform/client/: package-lock.json  package.json
Platform/client/public/: index.html
Platform/client/src/: App.jsx  App.scss  AreaAnalysis.jsx  (+6 more)
PlatformTools/: accessibility_upload.py  pyproject.toml  turbine_upload.py
access_modelling_code/: Functions.py  default_parameters.py  imports.py  pyvenv.cfg  script.py
analysis/: agg_data1_2012.csv  area_data_2days.csv  get_data.ipynb  point_data.csv  point_data_51.80_1.52.csv  pyproject.toml  request_data.ipynb
analysis/input_data/aggregate_wind_speed/: 2012_agg_data_part2.csv
analysis/tools/: README.md  VCL_get_query_result.py  VCL_get_query_status.py  VCL_query_aggregation.py  VCL_query_threshold.py  VCL_query_timeseries.py  VCL_query_timeseries_area.py
gifs and plots for the GUI/: URL_txt
vestas_data_collection/: concatenate_data.ipynb  download.py  pyproject.toml  readme.md  request_data.ipynb  system_prompt.txt  wind.html
vestas_data_collection/tools/: ExternalVclApi.postman_collection.json  VCL_query_aggregation.py  VCL_query_timeseries.py
(+18 files in other folders)
