[tool.poetry]
name = "platformtools"
version = "0.1.0"
description = ""
authors = ["Ed Hamilton <ed@jehamilton.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
pymssql = "^2.2.11"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
