[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["jolpica <47005135@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"
ruff = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
